see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6 and 1.7, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

26-Oct-2011 Jean-Marie Simonet
 # [#27018] The Table in the Category List Layout Could Sort ONLY by Created Date Irrespective of What is Selected for Show Date

25-Oct-2011 Jean-Marie Simonet
 + [#26995] *Adding to the multilanguage status module a check for contacts assigned languages. Thanks Christophe.
 #$ [#26988] Incongruous Language Implementation in Article List Header
 $  [#27019] Change Modified date to Modified Date for Consistency in en-GB.com_content.ini in the Front End. Thanks Mig.

24-Oct-2011 Jean-Marie Simonet
 # [#27010] Show or hide the menu title does not exist for the type of menu alias

23-Oct-2011 Christophe Demko
 # [#25782] When Default-menuitem set to registerd, homepage is 404

20-Oct-2011 Christophe Demko
 # [#25031] Support Forum URL as language file option

19-Oct-2011 Jean-Marie Simonet
 # [#26977] *Multilanguage: adding custom Site Name per Content Language
 + Adding Austria and Switzerland flags for mod_languages
 # Modifying version.php to 1.7.2
 
18-Oct-2011 Christophe Demko
 # [#26897] JDatabasequery work in com_plugins

17-Oct-2011 Jean-Marie Simonet
 # [#26972] Small regression rev. 22054, skipping translation in <description>, + BC 1.6.x issue. Thanks Cir Tap
 # [#26885] JText do not recognize "" no-string. Thanks Christophe.
 # [#26491] Date Icon "string untranslated". Thanks Christophe
 # [#24973] JHTML select.options with html entities. Thanks Pavel and Bill.
 
16-Oct-2011 Christophe Demko
 # [#26904] JDatabasequery work in com_redirect and com_search (Elin Waring)
 # [#26898] JDatabasequery work in com_newsfeeds (Elin Waring)